[gd_scene load_steps=2 format=2]

[ext_resource path="res://rsc/changer/changer.gd" type="Script" id=1]

[node name="changer" type="Panel"]
anchor_right = 1.0
margin_bottom = 36.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v_box_container" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scale" type="HSlider" parent="v_box_container"]
margin_left = 17.0
margin_right = 317.0
margin_bottom = 16.0
rect_min_size = Vector2( 300, 0 )
min_value = 0.05
max_value = 1.5
step = 0.001
value = 0.75

[node name="label" type="Label" parent="v_box_container/scale"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "SCALE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="energy" type="HSlider" parent="v_box_container"]
margin_left = 337.0
margin_right = 637.0
margin_bottom = 16.0
rect_min_size = Vector2( 300, 0 )
min_value = 0.5
max_value = 3.0
step = 0.001
value = 1.0

[node name="label" type="Label" parent="v_box_container/energy"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "ENERGY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="color_picker_button" type="ColorPickerButton" parent="v_box_container"]
margin_left = 657.0
margin_right = 1007.0
margin_bottom = 36.0
rect_min_size = Vector2( 350, 0 )
color = Color( 1, 1, 1, 1 )

[connection signal="value_changed" from="v_box_container/scale" to="." method="_on_scale_value_changed"]
[connection signal="value_changed" from="v_box_container/energy" to="." method="_on_energy_value_changed"]
[connection signal="color_changed" from="v_box_container/color_picker_button" to="." method="_on_color_picker_button_color_changed"]
